[package]
name = "sdl_raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.23.1", features = ["derive"] }
cgmath = "0.18.0"
fastrand = "2.3.0"
glsl_compiler = "0.1.2"
sdl3 = { version = "0.14.28" }
tokio = {version = "1.47.1", features = ["rt-multi-thread", "macros"] }
